2012-12-04  Andrew Potter  <agpotter@gmail.com>

	PixbufAnimation: Fix refcounting on get_iter().

	* gdk/src/pixbufanimation.hg: gdk_pixbuf_animation_get_iter() returns a new
	reference, so we should not be taking an extra reference(). Bug #688686.

2012-12-03  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Builder: Add const versions of get_object() and get_widget[_derived]().

	* gtk/src/builder.hg: Add const versions of get_object(), get_widget()
	and get_widget_derived(). Bug #666823.

2012-12-03   Hub Figuière  <hub@figuiere.net>

	Gtk::Builder: Add get_objects().

	* gtk/src/builder.hg: Add get_objects().
	* gtk/src/gtk_docs_override.xml: Change the documentation to suit this C++ API.
	Bug #666823

2012-11-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	ScrolledWindow: Add remove_with_viewport().

	* gtk/src/scrolledwindow.[hg|ccg]: Add remove_with_viewport(). Bug #685739.

2012-11-13  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Bin, Container::remove(): Restore the floating ref of a managed widget.

	* gtk/src/bin.ccg:
	* gtk/src/container.ccg: If the removed widget is managed, make the added
	ref count floating, avoiding excessive ref counts on widgets that are
	repeatedly added and removed. Bug #685739.

3.6.0:

2012-10-21  Murray Cumming  <murrayc@murrayc.com>

	Create only .tar.xz tarballs.

        * configure.ac: This is what ftp.gnome.org wants, so this avoids
	it doing any repackaging.

2012-10-09  Murray Cumming  <murrayc@murrayc.com>

        ComboBox: set_active_id(): Add documentation.

        * gtk/src/combobox.hg: Add documentation so we can use our own
	@newin{} line.

2012-10-09  Murray Cumming  <murrayc@murrayc.com>

        ComboBox: Add set_active_id(), deprecating get_active_id(string).

        * gtk/src/combobox.hg: We just got the name wrong before, calling it
	get instead of set. Also gave it the bool return type from the 
	C function.
	Bug #685801 (Phil Wolff)

2012-10-07  Murray Cumming  <murrayc@murrayc.com>
