@@ -1,3 +1,12 @@
+2012-12-06  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
+	gen_scripts: Get information from gdk-pixbuf.
+
+	* tools/gen_scripts/gdk_generate_docs.sh: Include documentation from
+	gdk-pixbuf in gdk_docs.xml.
+	* tools/gen_scripts/gdk_generate_enums.sh: Generate gdk_pixbuf_enums.defs.
+	* tools/gen_scripts/gdk_generate_methods.sh: Generate gdk_pixbuf_methods.defs.
+
 2012-12-04  Andrew Potter  <agpotter@gmail.com>
 
 	PixbufAnimation: Fix refcounting on get_iter().
